fixed spacing issues

--- a/src/components/FixerFinder/FixerFinder.css
+++ b/src/components/FixerFinder/FixerFinder.css
@@ -66,3 +66,11 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.updateAreaBtn {
+  margin-bottom: 20px;
+}
+
+.autoRightMargin {
+  margin-right: auto;
+}
